--- a/SmartPillowApp/app/src/main/res/values/strings.xml
+++ b/SmartPillowApp/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="stop_recording">Stop</string>
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="pick_date">Select a Date</string>
 </resources>
